Added custom feature options

--- a/app/views/fields/tinymce/_form.html.erb
+++ b/app/views/fields/tinymce/_form.html.erb
@@ -3,5 +3,5 @@
   <%= f.label field.attribute %>
 </div>
 <div class="field-unit__field">
-  <%= f.text_area field.attribute, class: "tinymce" %>
+  <%= f.text_area field.attribute, class: "tinymce", rows: field.rows, columns: field.columns %>
 </div>
